<resources>
    <string name="app_name">CovidTracker</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">LET`S GO</string>

    <string name="slide_1_title">Select Language</string>
    <string name="slide_1_title2">භාෂාව තෝරන්න</string>
    <string name="slide_1_desc">English</string>
    <string name="slide_1_desc2">සිංහල</string>


    <string name="slide_2_title">Help to fight COVID 19 in Sri Lanka</string>
    <string name="slide_2_desc">You can find whether you have encountered COVID 19 positive patient in last 3 weeks.</string>

    <string name="slide_3_title">This app works with Bluetooth</string>
    <string name="slide_3_desc">Please keep your bluetooth turned on whenever you go out</string>

    <string name="slide_4_title">Your Privacy is Ensured</string>
    <string name="slide_4_desc">This app does not record your location and only record nearby users around you. Everything stays on your device and will automatically delete after three weeks</string>
    <string name="join_with_covid_tracker">JOIN with Covid Tracker</string>
    <string name="join_desc">We will generate a unique id for you ! Optionally you can provide your mobile number. It will be used to contact you if required</string>
    <string name="contact_number">Contact Number (Optional)</string>
    <string name="join">JOIN</string>
    <string name="verify_your_number">Verify your Number</string>
    <string name="verify_number_desc">We sent a verification code to your number. Please enter it here to verify the number</string>
    <string name="code">Code</string>
    <string name="verify">VERIFY</string>
    <string name="verification_succ">Verification Successful</string>
    <string name="wrong_code">Entered code is incorrect ! Please try again</string>
    <string name="tracker_active">CovidTracker is Active</string>
</resources>