<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/lang" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/slide_1_title"
            android:textColor="@color/screen_title"
            android:textSize="@dimen/slide_title"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/slide_1_title2"
            android:textColor="@color/screen_title"
            android:textSize="@dimen/slide_title"
            android:textStyle="bold" />



        <LinearLayout
            android:id="@+id/lang_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/en"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="@dimen/desc_padding"
                android:paddingRight="@dimen/desc_padding"
                android:text="@string/slide_1_desc"
                android:textAlignment="center"
                android:textColor="@color/screen_text"
                android:textSize="@dimen/slide_desc" />

            <ImageView
                android:id="@+id/ticken"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:layout_alignParentRight="true"
                android:visibility="visible"
                android:src="@drawable/tick"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lang_sn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/sn"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="@dimen/desc_padding"
                android:paddingRight="@dimen/desc_padding"
                android:text="@string/slide_1_desc2"
                android:textAlignment="center"
                android:textColor="@color/screen_text"
                android:textSize="@dimen/slide_desc" />

            <ImageView
                android:id="@+id/ticksn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:layout_alignParentRight="true"
                android:visibility="invisible"
                android:src="@drawable/tick"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>